# liblbfgs

./: .gitignore  CMakeLists.txt  config.h.in
include/: lbfgs.h
lib/: lbfgs.c
src/: CMakeLists.txt
src/lib/: config.h  lbfgs.c  lbfgs.h
src/sample/: sample.c  sample2.cpp  sample3.cpp
